<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_adminadditem2"
    tools:context="com.example.desmond.libraryapp.SummaryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/bg_adminadditem2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:gravity="center_vertical|center"
            android:text="@string/lbl_userSummary"
            android:textColor="#826225"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/bg_adminadditem2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/lbl_userSummary8"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/lbl_userSummary9"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/bg_forgotpassword"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/lbl_userSummary2"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!--ListView
            android:id="@+id/listViewBooksReserved"
            android:layout_width="match_parent"
            android:layout_height="150dp" -->

        <TextView
            android:id="@+id/textView36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/lbl_userSummary3"
            android:textColor="@color/input_register_hint"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/lbl_userSummary4"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/lbl_userSummary5"
            android:textColor="@color/input_register_hint"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/lbl_userSummary6"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/lbl_userSummary7"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/btn_AdvancedSearch"
            android:fontFamily="@font/crete_round"
            android:text="@string/btn_cancelReservation"
            android:textColor="@color/cardview_light_background"
            android:textSize="18sp"
            android:textStyle="bold"/> >

    </LinearLayout>

</LinearLayout>
