<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_adminadditem2"
    android:orientation="vertical"
    tools:context="com.example.desmond.libraryapp.HelpFragment">


    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/lbl_helppage"
        android:textColor="#826225"
        android:textSize="45sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/bg_forgotpassword"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView51"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lbl_helppage4"
            android:textColor="@color/btn_AdvancedSearch"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView52"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="fill_horizontal"
            android:text="@string/lbl_helppage5"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView53"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:gravity="fill_horizontal"
            android:text="@string/lbl_helppage6"
            android:textColor="@color/cardview_dark_background"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtEmailHelp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/lbl_helppage3"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>
